--- a/app/views/users/match.html.erb
+++ b/app/views/users/match.html.erb
@@ -35,7 +35,7 @@
               <div class="col-lg-6 col-12">
                 <h2 class="heading heading-6 strong-600 mb-0 text-capitalize strong-500 mb-0">
                     <a href="#" class="link text-underline--none">
-                      <i class="ion-ios-arrow-back"></i> Voici tes matchs, commence à échanger dès maintenant
+                      <i class="ion-ios-arrow-back"></i> Contacts
                     </a>
                 </h2>
               </div>
@@ -47,8 +47,9 @@
           <div class="link-menu link-menu--style-3 py-4 border-bottom">
             <%= link_to 'Mon profil', current_user %>
             <%= link_to 'Modifier mon profil', edit_user_registration_path %>
-            <%= link_to 'Mes Matchs', match_user_path(current_user), class: 'active' %>
-            <%= link_to 'Following', following_user_path(current_user) %>
+            <%= link_to 'Mes contacts', match_user_path(current_user), class: 'active' %>
+            <%= link_to 'Mes demandes', following_user_path(current_user) %>
+            <%= link_to 'Messagerie', user_chats_path(current_user) %>
           </div>
 
           <!-- User follower and following -->
