--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,11 +32,11 @@
                     <%= link_to (image_tag 'icons/home-blanc.png'), root_path, class: 'nav-link' %>
                   </li>
                   <% if user_signed_in? %>
-                    <li class="nav-item dropdown megamenu">          
+                    <li class="nav-item dropdown megamenu">
                       <%= link_to (image_tag 'icons/profil-blanc.png'), user_path(current_user.id), class: 'nav-link' %>
                     </li>
-                    <li class="nav-item dropdown megamenu">          
-                      <%= link_to (image_tag 'icons/enveloppe-blanc.png'), user_path(current_user.id), class: 'nav-link' %>
+                    <li class="nav-item dropdown megamenu">
+                      <%= link_to (image_tag 'icons/enveloppe-blanc.png'), user_chats_path(current_user.id), class: 'nav-link' %>
                     </li>
                     <li class="nav-item dropdown megamenu">
                       <%= link_to "Se Déconnecter", destroy_user_session_path, method: :delete, class: 'nav-link'%>
@@ -49,8 +49,7 @@
                         <%= link_to "S'enregistrer", new_user_registration_path, class: 'nav-link' %>
                       </li>
                   <% end %>
-              </ul>    
-            </div> 
-        </div>      
+              </ul>
+            </div>
+        </div>
     </nav>
-
