tenative de fixer le footer

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -50,9 +50,9 @@
 
 .centered-2{
     position: relative;
-    transform: translate(-50%, -70%);
-    top: 70%;
-    left: 43%;
+    transform: translate(-50%, -50%);
+    left: 40%;
+    background-color: #FF5A26;
 }
 
 .c-orange{
