--- a/app/views/static_pages/_home.html.erb
+++ b/app/views/static_pages/_home.html.erb
@@ -2,17 +2,18 @@
 <%= "Speak&Up | Accueil" %>
 <% end %>
 <!--    BANNER        -->
-<div class="image">
-    <%= image_tag 'background-2.jpg', :class => 'banner-img2'%>
-    
-    <div class=" container centered-2">
-        <div class= "row">
-            <h1 class="heading display-4 strong-400 c-white">
-              Rencontrer, échanger, s'améliorer.
-            </h1>
 
-            <div class="lead mt-3 mb-3 c-white">
-                Speak&UP est la première plateforme de rencontre uniquement basée sur l'apprentissage des langues.
+    <%= image_tag 'img-15.jpg', :class => 'banner-img2'%>
+    <div class=" container centered-2">
+
+        
+            <div class= "row">
+                <h1 class="heading display-4 strong-400 c-white">
+                  Rencontrer, échanger, s'améliorer.
+                </h1>
+                <p class="lead mt-3 mb-3 c-orange">
+                    Speak&UP est la première plateforme de rencontre uniquement basée sur l'apprentissage des langues.
+                </p>
             </div>
         </div>
     </div>
@@ -57,7 +58,7 @@
                             </li>
                           </ul>
                         </div>
-                        <p><%= link_to 'Voir profil', User.find(key) %>
+                        <p><%= link_to 'Voir profil', User.find(key), class: 'btn btn-styled btn-base-1 btn-circle' %>
                       </div>
                     </div>
                   </div>
