--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title) do %>
 <%= "Speak&Up | Mes likes" %>
 <% end %>
-<section class="slice-sm sct-color-1">
+<section class="slice-sm sct-color-1 tout">
   <div class="profile">
     <div class="container">
       <div class="row cols-xs-space cols-sm-space cols-md-space">
@@ -86,5 +86,6 @@
             </div>
           </div>
         </div>
+        <% end -%>
 </section>
-<% end -%>
+
