--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title) do %>
-<%= "Speak&Up | Mes likes" %>
+	<%= "Speak&Up | Mes likes" %>
 <% end %>
 <section class="slice-sm sct-color-1">
   <div class="profile">
@@ -8,17 +8,14 @@
         <div class="col-lg-4">
           <div class="sidebar sidebar-inverse bg-base-1 sidebar--style-2 no-border stickyfill">
             <div class="widget">
-        <!-- Profile picture -->
               <div class="profile-picture profile-picture--style-2">
                 <% if @user.avatar.attached? %>
-                  <%= image_tag @user.avatar, :class=> "img-center"%>
-                    <% else %>
-                      <%= image_tag "profil.jpg", :class=> "img-center"%>
-                    <% end %>
-                    <%= link_to '', edit_user_registration_path, :class =>"btn-aux" %>
+                  <%= image_tag @user.avatar, class: 'img-center' %>
+                <% else %>
+                  <%= image_tag "profil.jpg", class: 'img-center' %>
+                <% end %>
+                <%= link_to '', edit_user_registration_path, class: 'btn-aux' %>
               </div>
-
-        <!-- Profile details -->
               <div class="profile-details">
                 <h2 class="heading heading-4 strong-500 profile-name"><%= @user.first_name %> <%= @user.last_name %></h2>
                 <h3 class="heading heading-light heading-6 strong-400 profile-location"><%= @user.city %>, <%= @user.country %></h3>
@@ -26,24 +23,21 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-8">
           <div class="main-content">
-          <!-- Page title -->
-          <% provide(:title, @title) %>
+          	<% provide(:title, @title) %>
             <div class="row align-items-center">
               <div class="col-lg-6 col-12">
                 <h2 class="heading heading-6 strong-600 mb-0 text-capitalize strong-500 mb-0">
-                    <a href="#" class="link text-underline--none">
-                      <i class="ion-ios-arrow-back"></i> Demandes en cours
-                    </a>
+                  <a href="#" class="link text-underline--none">
+                    <i class="ion-ios-arrow-back"></i> Demandes en cours
+                  </a>
                 </h2>
               </div>
               <div class="col-lg-6 col-12">
               </div>
             </div>
           </div>
-
           <div class="link-menu link-menu--style-3 py-4 border-bottom">
             <%= link_to 'Mon profil', current_user %>
             <%= link_to 'Modifier mon profil', edit_user_registration_path %>
@@ -51,9 +45,6 @@
             <%= link_to 'Mes demandes', following_user_path(current_user), class: 'active' %>
             <%= link_to 'Messagerie', user_chats_path(current_user) %>
           </div>
-
-          <!-- User follower and following -->
-
 					<div class="row cols-md-space cols-sm-space cols-xs-space">
             <% if @users.any? %>
               <% @users.each do |user| %>
@@ -94,7 +85,7 @@
                       <div>
                         <%= link_to 'Voir le profil', user %><br>
                         <% if @other_user != current_user %>
-                            <%= link_to 'Envoyer un message', user_chats_path(current_user) %>
+                          <%= link_to 'Envoyer un message', user_chats_path(current_user) %>
                         <% end %>
                       </div>
                     </div>
@@ -103,11 +94,8 @@
               <% end %>
             <% end %>
           </div>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
+      </div>
+    </div>
+  </div>
 </section>
