--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,11 +52,15 @@
                             </div>
                         </div>
                         <div class="link-menu link-menu--style-3 py-4 border-bottom">
-                            <%= link_to 'Mon profil', current_user, class: 'active'%>
-                            <%= link_to 'Modifier mon profil', edit_user_registration_path %>
-                            <%= link_to 'Mes contacts', match_user_path(current_user) %>
-                            <%= link_to 'Mes demandes', following_user_path(current_user) %>
-                            <%= link_to 'Messagerie', user_chats_path(current_user) %>
+                            <% if @user == current_user %>
+                                <%= link_to 'Mon profil', current_user, class: 'active'%>
+                                <%= link_to 'Modifier mon profil', edit_user_registration_path %>
+                                <%= link_to 'Mes contacts', match_user_path(current_user) %>
+                                <%= link_to 'Mes demandes', following_user_path(current_user) %>
+                                <%= link_to 'Messagerie', user_chats_path(current_user) %>
+                                <% else %>
+                                    <%= link_to 'Mon profil', current_user, class: 'active'%>
+                            <% end %>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
