--- a/app/views/languages/edit.html.erb
+++ b/app/views/languages/edit.html.erb
@@ -47,13 +47,14 @@
 			<div class="link-menu link-menu--style-3 py-4 border-bottom">
         <%= link_to 'Mon profil', current_user%>
         <%= link_to 'Modifier mon profil', edit_user_registration_path, class: 'active' %>
-        <%= link_to 'Mes Matchs', match_user_path(current_user) %>
-        <%= link_to 'Following', following_user_path(current_user) %>			
+        <%= link_to 'Mes contacts', match_user_path(current_user) %>
+        <%= link_to 'Mes demandes', following_user_path(current_user) %>	
+        <%= link_to 'Messagerie', user_chats_path(current_user) %>
 			</div>
 			<div class="link-menu link-menu--style-3 py-4 ">
-                <%= link_to 'Paramètres général', edit_user_registration_path%>
-                <%= link_to 'Préférences', interests_edit_path%>
-                <%= link_to 'Langues', languages_edit_path, :class =>"active" %>
+          <%= link_to 'Paramètres général', edit_user_registration_path%>
+          <%= link_to 'Préférences', interests_edit_path%>
+          <%= link_to 'Langues', languages_edit_path, :class =>"active" %>
             </div>
 			<!-- Account settings -->
 			<div class="row">
