--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -25,7 +25,6 @@
         </div>
         <div class="col-lg-8">
           <div class="main-content">
-          	<% provide(:title, @title) %>
             <div class="row align-items-center">
               <div class="col-lg-6 col-12">
                 <h2 class="heading heading-6 strong-600 mb-0 text-capitalize strong-500 mb-0">
@@ -48,6 +47,8 @@
 					<div class="row cols-md-space cols-sm-space cols-xs-space">
             <% if @users.any? %>
               <% @users.each do |user| %>
+                <% if User.match?(current_user, user) %>
+                <% else %>
                 <div class="col-lg-4">
                   <div class="block block--style-3">
                     <div class="profile-picture profile-picture--style-2">
@@ -86,6 +87,7 @@
                         <%= link_to 'Voir le profil', user %><br>
                         <% if @other_user != current_user %>
                           <%= link_to 'Envoyer un message', user_chats_path(current_user) %>
+                        <% end %>
                         <% end %>
                       </div>
                     </div>
