update presentation text

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -70,7 +70,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="form-group">
-                      <label>Présentation</label><br>
+                      <label>Présente-toi en quelques mots</label><br>
                       <%= f.text_field :bio, autofocus: true, autocomplete: "Présentez vous", :class =>"form-control form-control-lg" %>
                     </div>
                   </div>
