--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,11 @@
   <body>
     <% if user_signed_in? %>
     <%= render 'layouts/header'%>
-    <% end -%>
     <%= render 'layouts/alerts' %>
+    <% else %>
+    <%= render 'layouts/alerts' %>
+    <% end -%>
+
     <%= yield %>
     <%= render 'layouts/footer'%>
   </body>
