--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -28,7 +28,7 @@
 
 
 .image-2 {
-     background-image: url(background-2.jpg);
+     background-image: image-url("background-2.jpg");
      background-size:cover;
      background-repeat: no-repeat;
      width: 100%;
