--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -1,7 +1,7 @@
 <div id="messages">
 
 <%=form_for message, remote: true,authenticity_token: true do |f|%>
-  <%= f.text_area :content, data: {textarea: "message"}%>
+  <%= f.text_area :content, data: {textarea: "message"}, placeholder: "Entrez votre message ici"%>
 <!-- this hidden field is for the MessagesController and Action Cable to keep track of what chat this message belongs to -->
 <%= f.hidden_field :chat_id, value: chat.id %>
 <%end%>
