--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,99 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<section class="slice sct-color-2 border-top border-bottom">
+  <div class="container">
+    <div class="section-title section-title--style-1 text-center mb-2">
+        <h3 class="section-title-inner heading-3 strong-500 text-normal">
+          Notre équipe
+        </h3>
+        <span class="section-title-delimiter clearfix d-none"></span>
+    </div>
+    <span class="clearfix"></span>
+    <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center">
+      Vous pouvez contacter chaque membre de notre équipe en cliquant sur leur photo.
+    </div>
+    <span class="space-xs-xl"></span>
+    <div class="row-wrapper">
+      <div class="row">
+        <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+          <div class="block block--style-3 block--style-3-v2 px-3">
+            <div class="block-image px-4">
+            	<a href="" target="_blank">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-1.jpg" class="img-circle">
+              </a>
+            </div>
+            <div class="block-body text-center">
+              <h3 class="heading heading-5 strong-600 mb-0">Christophe Leray</h3>
+              <h4 class="heading heading-sm strong-300">Programmeur</h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+          <div class="block block--style-3 block--style-3-v2 px-3">
+            <div class="block-image px-4">
+            	<a href="" target="_blank">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-2.jpg" class="img-circle">
+              </a>
+            </div>
+            <div class="block-body text-center">
+              <h3 class="heading heading-5 strong-600 mb-0">Sandrine Le Breton</h3>
+              <h4 class="heading heading-sm strong-300">Programmeuse</h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+          <div class="block block--style-3 block--style-3-v2 px-3">
+            <div class="block-image px-4">
+            	<a href="https://www.linkedin.com/in/romainsaillour/" target="_blank">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-3.jpg" class="img-circle">
+              </a>
+            </div>
+            <div class="block-body text-center">
+              <h3 class="heading heading-5 strong-600 mb-0">Romain Saillour</h3>
+              <h4 class="heading heading-sm strong-300">Programmeur</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+          <div class="block block--style-3 block--style-3-v2 px-3">
+            <div class="block-image px-4">
+            	<a href="" target="_blank">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-4.jpg" class="img-circle">
+              </a>
+            </div>
+            <div class="block-body text-center">
+              <h3 class="heading heading-5 strong-600 mb-0">Léona Chevrel</h3>
+              <h4 class="heading heading-sm strong-300">Programmeuse</h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+          <div class="block block--style-3 block--style-3-v2 px-3">
+            <div class="block-image px-4">
+            	<a href="https://www.linkedin.com/in/remi-samson/" target="_blank">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-5.jpg" class="img-circle">
+              </a>
+            </div>
+            <div class="block-body text-center">
+              <h3 class="heading heading-5 strong-600 mb-0">Rémi Samson</h3>
+              <h4 class="heading heading-sm strong-300">Programmeur</h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+          <div class="block block--style-3 block--style-3-v2 px-3">
+            <div class="block-image px-4">
+            	<a href="https://www.thehackingproject.org/" target="_blank">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-6.jpg" class="img-circle">
+              </a>
+            </div>
+            <div class="block-body text-center">
+              <h3 class="heading heading-5 strong-600 mb-0">Vous ?</h3>
+              <h4 class="heading heading-sm strong-300">Postuler</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
