--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -29,7 +29,7 @@
             <div class="page-title">
               <div class="row align-items-center">
                 <div class="col-lg-6 col-12">
-                  <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Modification profile</h2>
+                  <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Modification profil</h2>
                 </div>
                 <div class="col-lg-6 col-12">
               	</div>
@@ -43,7 +43,7 @@
               <%= link_to 'Messagerie', user_chats_path(current_user) %>
             </div>
             <div class="link-menu link-menu--style-3 py-4 ">
-              <%= link_to 'Paramètres général', edit_user_registration_path, class: 'active' %>
+              <%= link_to 'Paramètres', edit_user_registration_path, class: 'active' %>
               <%= link_to 'Préférences', interests_edit_path %>
               <%= link_to 'Langues', languages_edit_path %>
             </div>
