--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,10 +46,11 @@
                                         </a>
                                     </h2>
                                 </div>
+                                <div class="row align-items-center">
                                 <div class="col-lg-6 col-12">
-                                     <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Profile</h2>
+                                     <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Mon Profil</h2>
                                 </div>
-                            </div>
+                                </div>
                         </div>
                         <div class="link-menu link-menu--style-3 py-4 border-bottom">
                             <% if @user == current_user %>
