--- a/app/views/interests/edit.html.erb
+++ b/app/views/interests/edit.html.erb
@@ -36,25 +36,24 @@
               <div class="page-title">
                 <div class="row align-items-center">
                   <div class="col-lg-6 col-12">
-                    <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Profil
-                    </h2>
+                   <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Modification profil</h2>
                   </div>
-                <div class="col-lg-6 col-12">                          
+                  <div class="col-lg-6 col-12">
+                </div>
               </div>
             </div>
-          </div>
-        <div class="link-menu link-menu--style-3 py-4 border-bottom">
-          <%= link_to 'Mon profil', current_user%>
-          <%= link_to 'Modifier mon profil', edit_user_registration_path, class: 'active' %>
-          <%= link_to 'Mes contacts', match_user_path(current_user) %>
-          <%= link_to 'Mes demandes', following_user_path(current_user) %>
-          <%= link_to 'Messagerie', user_chats_path(current_user) %>
-        </div>
-        <div class="link-menu link-menu--style-3 py-4 ">
-          <%= link_to 'Paramètres général', edit_user_registration_path%>
-          <%= link_to 'Préférences', interests_edit_path, class: 'active' %>
-          <%= link_to 'Langues', languages_edit_path %>
-        </div>
+            <div class="link-menu link-menu--style-3 py-4 border-bottom">
+              <%= link_to 'Mon profil', current_user %>
+              <%= link_to 'Modifier mon profil', edit_user_registration_path, class: 'active' %>
+              <%= link_to 'Mes contacts', match_user_path(current_user) %>
+              <%= link_to 'Mes demandes', following_user_path(current_user) %>
+              <%= link_to 'Messagerie', user_chats_path(current_user) %>
+            </div>
+            <div class="link-menu link-menu--style-3 py-4 ">
+              <%= link_to 'Paramètres', edit_user_registration_path%>
+              <%= link_to 'Préférences', interests_edit_path, class: 'active'  %>
+              <%= link_to 'Langues', languages_edit_path %>
+            </div>
         <!-- Account settings -->
         <div class="row">
           <div class="col-lg-12">
