--- a/app/views/languages/edit.html.erb
+++ b/app/views/languages/edit.html.erb
@@ -26,7 +26,7 @@
 
                   <!-- Profile connect -->
                   <div class="profile-connect mt-4">
-                      <a href="#" class="btn btn-styled btn-base-2 btn-circle">Send message</a>
+                      <a href="#" class="btn btn-styled btn-base-2 btn-circle">Message</a>
                   </div>
              	</div>
                </div>
@@ -38,7 +38,7 @@
                 <div class="page-title">
                  <div class="row align-items-center">
                   <div class="col-lg-6 col-12">
-                    <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Profil</h2>
+                    <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Modification profil</h2>
                   </div>
                   <div class="col-lg-6 col-12">
 				  </div>
@@ -52,10 +52,10 @@
         <%= link_to 'Messagerie', user_chats_path(current_user) %>
 			</div>
 			<div class="link-menu link-menu--style-3 py-4 ">
-          <%= link_to 'Paramètres général', edit_user_registration_path%>
-          <%= link_to 'Préférences', interests_edit_path%>
-          <%= link_to 'Langues', languages_edit_path, :class =>"active" %>
-            </div>
+        <%= link_to 'Paramètres', edit_user_registration_path %>
+        <%= link_to 'Préférences', interests_edit_path %>
+        <%= link_to 'Langues', languages_edit_path, class: 'active' %>
+      </div>
 			<!-- Account settings -->
 			<div class="row">
 				<div class="col-lg-12">
