--- a/app/views/static_pages/_home.html.erb
+++ b/app/views/static_pages/_home.html.erb
@@ -12,7 +12,7 @@
   </div>
   <section class="slice sct-color-1">
     <div class="container">
-      <h3 class="c-orange">Quelques profils succeptibles de vous interesser :</h3>
+      <h3 class="c-orange">Quelques profils susceptibles de vous interesser :</h3>
       <div class="widget mt-4">
         <div class="row-wrapper">
           <div class="row cols-md-space cols-sm-space cols-xs-space">
