--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -84,9 +84,9 @@
                           </ul>
                         </div>
                         <div>
-                          <%= link_to 'Voir le profil', user %><br>
+                          <%= link_to 'Voir le profil', user, class:"btn btn-styled btn-base-1 btn-circle" %><br>
                           <% if @other_user != current_user %>
-                            <%= link_to 'Envoyer un message', user_chats_path(current_user) %>
+                            <%= link_to 'Envoyer un message', user_chats_path(current_user), class:"btn btn-styled btn-base-1 btn-circle" %>
                         <% end %>
                         </div>
                       </div>
