modif redirection envoyer message ok

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -21,7 +21,7 @@
           // app/assets/javascripts/messages_form.js
         </script>
 
-        <%= link_to "Retour", user_chats_path(current_user), class: 'btn btn-styled btn-base-1 btn-circle', id: 'button-retour' %>
+        <%= link_to "Retour vers la messagerie", user_chats_path(current_user), class: 'btn btn-styled btn-base-1 btn-circle', id: 'button-retour' %>
       </div>
     </div>
   </div>
