--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -24,8 +24,7 @@
 					        <!-- Profile follow form and message -->
 					        <div class="profile-connect mt-4">
 					            <p><%= render '/users/follow_form' %></p>
-					            <p><%= render '/chats/send_message' %></p>
-                            </div>
+                  </div>
    						</div>
                     </div>
                 </div>
@@ -36,6 +35,7 @@
                             <div class="row align-items-center">
                                 <div class="col-lg-6 col-12">
                                     <h2 class="heading heading-5 text-capitalize strong-500 mb-0">
+                                      Messagerie
                                         <a href="#" class="link text-underline--none">
                                             <i class="ion-ios-arrow-back"></i>
                                         </a>
@@ -52,20 +52,23 @@
                       <%= link_to 'Mes demandes', following_user_path(current_user) %>
                       <%= link_to 'Messagerie', user_chats_path(current_user), class: 'active' %>
                   </div>
-
-                  <h3>Vos conversations :</h3>
-                  <ul class="chat-name">
-                    <% @users.each do |other_user| %>
-                     <% if other_user != current_user %>
-                       <li >
-                         <%= link_to(user_chats_path(current_user, :other_user => other_user.id), method: :post) do %>
-                         <%= other_user.first_name %>
-                         <%= other_user.last_name %>
-                         <% end %>
-                       </li>
-                      <% end %>
+                    <% unless @users.empty? %>
+                      <h4>Vos conversations :</h4>
+                      <ul class="chat-name">
+                        <% @users.each do |other_user| %>
+                         <% if other_user != current_user %>
+                           <li >
+                             <%= link_to(user_chats_path(current_user, :other_user => other_user.id), method: :post) do %>
+                             <%= other_user.first_name %>
+                             <%= other_user.last_name %>
+                             <% end %>
+                           </li>
+                          <% end %>
+                        <% end %>
+                      </ul>
+                      <% else %>
+                      <h4>Votre messagerie est vide</h4>
                     <% end %>
-                  </ul>
               </div>
           </div>
         </div>
