--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,24 +30,19 @@
 				            </div>
 				            <div class="profile-connect mt-4">
 				                <p><%= render 'follow_form' %></p>
-				                <p><%= render '/chats/send_message' %></p>
-                            </div>
+                        <% unless @user == current_user %>
+                          <p><%= link_to 'Envoyer message', user_chats_path(current_user), class: 'btn btn-styled btn-base-1 btn-circle' %></p>
+                        <% end %>
+                    </div>
    					    </div>
                     </div>
                 </div>
                 <div class="col-lg-8">
                     <div class="main-content">
                         <div class="page-title">
-                            <div class="row align-items-center">
+                            <div class="row align-items-center ">
                                 <div class="col-lg-6 col-12">
-                                    <h2 class="heading heading-5 text-capitalize strong-500 mb-0">
-                                        <a href="#" class="link text-underline--none">
-                                            <i class="ion-ios-arrow-back"></i>
-                                        </a>
-                                    </h2>
-                                </div>
-                                <div class="col-lg-6 col-12">
-                                     <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Profile</h2>
+                                     <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Profil de <%= @user.first_name %></h2>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +126,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                
+
                             <!-- Interests section  -->
                                 <hr class="mt-0 mb-0">
                                 <div class="card no-border bg-transparent">
