--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,7 @@
-<p>Welcome <%= @email %>!</p>
+<p>Bonjour <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>Afin de vérifier votre email et d'accéder à votre espace, merci de cliquer sur ce lien: </p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+<p>A très vite</p>
