add condition delete langauge if current_user

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -100,7 +100,9 @@
                                                             <% @user.spoken_languages.each do |language| %>
                                                               <li>
                                                                 <%= Language.find(language.language_id).name %>
-                                                                <%= link_to "Supprimer", languages_edit_path(:my_params => { :language_type => 'spoken', :language_id => language.language.id }), method: :delete %>
+                                                                <% if @user == current_user %>
+                                                                    <%= link_to "Supprimer", languages_edit_path(:my_params => { :language_type => 'spoken', :language_id => language.language.id }), method: :delete %>
+                                                                <% end %>
                                                               </li>
                                                             <% end %>
                                                         </ul>
@@ -119,9 +121,11 @@
                                                     <div>
                                                         <ul class="checkbox">
                                                           <% @user.wanted_languages.each do |language| %>
-                                                              <li>
+                                                              <li> 
                                                                 <%= Language.find(language.language_id).name %>
+                                                                <% if @user == current_user %>
                                                                 <%= link_to "Supprimer", languages_edit_path(:my_params => { :language_type => 'wanted', :language_id => language.language.id }), method: :delete %>
+                                                                <% end %>
                                                               </li>
                                                           <% end %>
                                                         </ul>
