modified the paragraph in the index

--- a/app/views/static_pages/_index.html.erb
+++ b/app/views/static_pages/_index.html.erb
@@ -10,7 +10,7 @@
                   Bienvenue sur Speak&UP
                 </h3>
                 <p class="text-lg line-height-1_8 c-white mt-4">
-                  Vous désirez rencontrer du monde avec qui parler étranger ?<br>
+                  Vous désirez rencontrer du monde et apprendre à parler de nouvelles langues ?<br>
                   Ici nous vous proposons des profils compatibles avec vos envies d'apprentissage.<br><br>
                   <strong>Inscrivez vous afin de profiter de l'expérience !</strong>
                 </p>
