[Page_Contact] Adding links and img

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -16,8 +16,8 @@
         <div class="col-lg-4 col-md-12 col-sm-12 col-12">
           <div class="block block--style-3 block--style-3-v2 px-3">
             <div class="block-image px-4">
-            	<a href="" target="_blank">
-              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-1.jpg" class="img-circle">
+            	<a href="https://www.linkedin.com/in/christophe-leray/" target="_blank">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-team-3.jpg" class="img-circle">
               </a>
             </div>
             <div class="block-body text-center">
@@ -29,8 +29,8 @@
         <div class="col-lg-4 col-md-12 col-sm-12 col-12">
           <div class="block block--style-3 block--style-3-v2 px-3">
             <div class="block-image px-4">
-            	<a href="" target="_blank">
-              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-2.jpg" class="img-circle">
+            	<a href="https://www.linkedin.com/in/sandrine-le-breton-675006106/" target="_blank">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-team-5.jpg" class="img-circle">
               </a>
             </div>
             <div class="block-body text-center">
@@ -43,7 +43,7 @@
           <div class="block block--style-3 block--style-3-v2 px-3">
             <div class="block-image px-4">
             	<a href="https://www.linkedin.com/in/romainsaillour/" target="_blank">
-              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-3.jpg" class="img-circle">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-team-4.jpg" class="img-circle">
               </a>
             </div>
             <div class="block-body text-center">
@@ -57,8 +57,8 @@
         <div class="col-lg-4 col-md-12 col-sm-12 col-12">
           <div class="block block--style-3 block--style-3-v2 px-3">
             <div class="block-image px-4">
-            	<a href="" target="_blank">
-              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-4.jpg" class="img-circle">
+            	<a href="https://www.linkedin.com/in/l%C3%A9ona-chevrel-192917165/" target="_blank">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-team-1.jpg" class="img-circle">
               </a>
             </div>
             <div class="block-body text-center">
@@ -71,7 +71,7 @@
           <div class="block block--style-3 block--style-3-v2 px-3">
             <div class="block-image px-4">
             	<a href="https://www.linkedin.com/in/remi-samson/" target="_blank">
-              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-5.jpg" class="img-circle">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-team-2.jpg" class="img-circle">
               </a>
             </div>
             <div class="block-body text-center">
@@ -84,12 +84,12 @@
           <div class="block block--style-3 block--style-3-v2 px-3">
             <div class="block-image px-4">
             	<a href="https://www.thehackingproject.org/" target="_blank">
-              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-6.jpg" class="img-circle">
+              	<img src="https://s3.eu-west-3.amazonaws.com/speak-and-up/team/contact-team-6.jpg" class="img-circle">
               </a>
             </div>
             <div class="block-body text-center">
               <h3 class="heading heading-5 strong-600 mb-0">Vous ?</h3>
-              <h4 class="heading heading-sm strong-300">Postuler</h4>
+              <h4 class="heading heading-sm strong-300">Apprenez à coder!</h4>
             </div>
           </div>
         </div>
