--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,7 @@
                       <%= link_to (image_tag 'icons/enveloppe-blanc.png'), user_chats_path(current_user), class: 'nav-link' %>
                     </li>
                     <li class="nav-item dropdown megamenu">
-                      <%= link_to "Se Déconnecter", destroy_user_session_path, method: :delete, class: 'nav-link'%>
+                      <%= link_to "Se Déconnecter", destroy_user_session_path, method: :delete, class: 'nav-link c-orange'%>
                     </li>
                     <% else %>
                       <li class="nav-item dropdown megamenu">
