--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -93,6 +93,22 @@
     background-color: #FF5A26 !important;
 }
 
+.bg-base-1 {
+    border-radius: 1.5em;
+}
+
+.bg-base-4.border {
+    border: 3px solid #FF5A26 !important;
+    border-radius: 1.5em;
+}
+
+.mt-0 {
+    border: 0.5px solid #FF5A26 !important;
+}
+
+.border-top {
+    border-top: 0.5px solid #FF5A26 !important;
+}
 
 .link-menu--style-3 a {
     background-color: #FF5A26 !important;
@@ -116,10 +132,14 @@
 
 .block--style-3 {
     border-radius: 1.1em !important;
+    border: 3px solid #FF5A26 !important;
 }
+
+
 
 @media (min-width: 932px) {
     section{
     height: 100%;
     }
 }
+
