--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="row cols-xs-space cols-sm-space cols-md-space">
                 <div class="col-lg-4">
-                    <div class="<%= @user == current_user ? 'sidebar sidebar-inverse bg-base-1 sidebar--style-2 no-border stickyfill' : 'sidebar sidebar-inverse bg-base-3 sidebar--style-2 border stickyfill' %>"> 
+                    <div class="<%= @user == current_user ? 'sidebar sidebar-inverse bg-base-1 sidebar--style-2 no-border stickyfill' : 'sidebar sidebar-inverse bg-base-4 sidebar--style-2 border stickyfill' %>"> 
                         <div class="widget">
                             <div class="profile-picture profile-picture--style-2">
                                 <% if @user == current_user %>
@@ -25,12 +25,12 @@
                                 <% end %>
                             </div>
 				            <div class="profile-details">
-				                <h2 class="heading heading-4 strong-500 profile-name"><%= @user.first_name %> <%= @user.last_name %></h2>
-				                <h3 class="heading heading-light heading-6 strong-400 profile-location"><%= @user.city %>, <%= @user.country %></h3>
+				                <h2 class="<%= @user == current_user ? 'heading heading-4 strong-500 profile-name' : 'heading heading-4 strong-500 profile-name c-orange'%> "><%= @user.first_name %> <%= @user.last_name %></h2>
+				                <h3 class="<%= @user == current_user ? 'heading heading-light heading-6 strong-400 profile-location' : 'heading heading-light heading-6 strong-400 profile-location c-black'%> "><%= @user.city %>, <%= @user.country %></h3>
 				            </div>
 				            <div class="profile-connect mt-4">
 				                <p><%= render 'follow_form' %></p>
-				                <p><%= render '/chats/send_message' %></p>
+				                <p><%= render '/chats/send_message'%></p>
                             </div>
    					    </div>
                     </div>
@@ -38,39 +38,33 @@
                 <div class="col-lg-8">
                     <div class="main-content">
                         <div class="page-title">
-                            <div class="row align-items-center">
+                        <% if @user == current_user %>
+                           <div class="row align-items-center">
                                 <div class="col-lg-6 col-12">
-                                    <h2 class="heading heading-5 text-capitalize strong-500 mb-0">
-                                        <a href="#" class="link text-underline--none">
-                                            <i class="ion-ios-arrow-back"></i>
-                                        </a>
-                                    </h2>
+                                  <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Mon profil</h2>
                                 </div>
-                                <div class="row align-items-center">
                                 <div class="col-lg-6 col-12">
-                                     <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Mon Profil</h2>
                                 </div>
-                                </div>
-                        </div>
-                        <div class="link-menu link-menu--style-3 py-4 border-bottom">
-                            <% if @user == current_user %>
-                                <%= link_to 'Mon profil', current_user, class: 'active'%>
-                                <%= link_to 'Modifier mon profil', edit_user_registration_path %>
-                                <%= link_to 'Mes contacts', match_user_path(current_user) %>
-                                <%= link_to 'Mes demandes', following_user_path(current_user) %>
-                                <%= link_to 'Messagerie', user_chats_path(current_user) %>
-                                <% else %>
+                            </div>
+                        
+                            <div class="link-menu link-menu--style-3 py-4 border-bottom">
+                                <% if @user == current_user %>
                                     <%= link_to 'Mon profil', current_user, class: 'active'%>
-                            <% end %>
-                        </div>
+                                    <%= link_to 'Modifier mon profil', edit_user_registration_path %>
+                                    <%= link_to 'Mes contacts', match_user_path(current_user) %>
+                                    <%= link_to 'Mes demandes', following_user_path(current_user) %>
+                                    <%= link_to 'Messagerie', user_chats_path(current_user) %>
+                                <% end %>
+                            </div>
+                        <% end -%>
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="form-default" data-toggle="validator" role="form">
                                     <div class="card no-border bg-transparent">
                                         <div class="card-title px-0 pb-0 no-border">
-                                            <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Biographie
+                                            <h2 class="heading heading-5 text-capitalize strong-500 mb-0 c-orange">Biographie
                                             </h2>
-                                            <p class="mt-1 mb-0">
+                                            <p>
                                                 <%= @user.bio %>
                                             </p>
                                         </div>
@@ -85,7 +79,7 @@
                                     <div class="page-title">
                                         <div class="row align-items-center">
                                             <div class="col-lg-6 col-12">
-                                                <h2 class="heading heading-5 text-capitalize strong-500 mb-0">
+                                                <h2 class="heading heading-5 text-capitalize strong-500 mb-0 c-orange">
                                                     <i class="ion-ios-arrow-back"></i> Langues
                                                 </h2>
                                             </div>
@@ -135,19 +129,24 @@
                                 
                             <!-- Interests section  -->
                                 <hr class="mt-0 mb-0">
-                                <div class="card no-border bg-transparent">
-                                    <div class="card-title px-0 pb-0 no-border">
-                                        <h3 class="heading heading-6 strong-600">
-                                            Centres d'intérêts
-                                        </h3>
-                                    </div>
-                                    <div class="card-body px-0">
-                                        <div class="row">
-                                            <div class="col-md-6 col-lg-4">
-                                                <% @user.interests.each do |interest| %>
-                                                    <span class="badge badge-lg badge-primary"><%= interest.name %></span>
-                                                <% end %>
+                                    <div class="card no-border bg-transparent">
+                                        <div class="card-title px-0 pb-0 no-border">
+                                            <div class="page-title">
+                                                <div class="row align-items-center">
+                                                    <div class="col-lg-6 col-12">
+                                                        <h2 class="heading heading-5 text-capitalize strong-500 mb-0 c-orange">
+                                                            <i class="ion-ios-arrow-back"></i> Centres d'intérêts
+                                                        </h2>
+                                                    </div>
+                                                </div>
                                             </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 col-lg-4">
+                                            <% @user.interests.each do |interest| %>
+                                            <span class="badge badge-lg badge-primary"><%= interest.name %></span>
+                                            <% end %>
                                         </div>
                                     </div>
                                 </div>
