--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -4,7 +4,7 @@
   <%= message.created_at %>
 </p>
 <% else %>
-<p class="message darker">
+<p class="message darker" id="message">
   <%= message.user.first_name %>: <%=message.content%><br>
   <%=  message.created_at %>
 </p>
