--- a/app/views/interests/edit.html.erb
+++ b/app/views/interests/edit.html.erb
@@ -60,7 +60,7 @@
           <!-- Interests info-->
           <div class="card no-border bg-transparent">
             <div class="card-title px-0 pb-0 no-border">
-              <h3 class="heading heading-6 strong-600">
+              <h3 class="heading heading-6 strong-600 c-orange">
                 Choisissez vos centres d'intérêts
               </h3>
               <p class="mt-1 mb-0">
