--- a/app/views/languages/edit.html.erb
+++ b/app/views/languages/edit.html.erb
@@ -62,8 +62,7 @@
 						<!-- Interests info-->
 						<div class="card no-border bg-transparent">
 							<div class="card-title px-0 pb-0 no-border">
-								<h3 class="heading heading-6 strong-600">							                      Ajoutez des langues
-								</h3>
+								<h3 class="heading heading-6 strong-600 c-orange">Ajoutez des langues</h3>
 							</div>
 							<div class="card-body px-0">
 								<%= form_for(current_user, url: languages_edit_path, method: :post) do |f| %>
