--- a/app/views/static_pages/_home.html.erb
+++ b/app/views/static_pages/_home.html.erb
@@ -25,7 +25,7 @@
             <% @comparisons_hash.each do |key, value| %>
               <% if key == current_user.id %>
               <% else %>
-                <div class="col-lg-4">
+                <div class="col-lg-4  marge">
                   <div class="block block--style-3">
                     <div class="profile-picture profile-picture--style-2">
                       <% if User.find(key).avatar.attached? %>
