--- a/app/views/users/match.html.erb
+++ b/app/views/users/match.html.erb
@@ -27,7 +27,7 @@
           <div class="main-content">
             <div class="row align-items-center">
               <div class="col-lg-6 col-12">
-                <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Mes Contacts</h2>
+                <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Mes contacts</h2>
               </div>
               <div class="col-lg-6 col-12">
               </div>
