--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -51,7 +51,7 @@
               <div class="col-lg-12">
                 <div class="card no-border bg-transparent">
                   <div class="card-title px-0 pb-0 no-border">
-                    <h3 class="heading heading-6 strong-600">Changer sa photo de profil</h3>
+                    <h3 class="heading heading-6 strong-600 c-orange">Changer sa photo de profil</h3>
                   </div>
                   <div class="card-body px-0">
                     <div class="row">
@@ -74,7 +74,7 @@
                 <hr class="mt-0 mb-0">
                 <div class="card no-border bg-transparent">
                   <div class="card-title px-0 pb-0 no-border">
-                    <h3 class="heading heading-6 strong-600">Supprimer sa photo de profil</h3>
+                    <h3 class="heading heading-6 strong-600 c-orange">Supprimer sa photo de profil</h3>
                   </div>
                   <div class="card-body px-0">
                     <p class="mt-1 mb-0">Pour supprimer votre photo de profil, cliquez sur le bouton ci dessous.</p><br>
@@ -86,7 +86,7 @@
                   <%= devise_error_messages! %>
                   <div class="card no-border bg-transparent">
                     <div class="card-title px-0 pb-0 no-border">
-                      <h3 class="heading heading-6 strong-600">Modifier le mot de passe</h3>
+                      <h3 class="heading heading-6 strong-600 c-orange">Modifier le mot de passe</h3>
                     </div>
                     <div class="card-body px-0">
                       <div class="row">
@@ -121,7 +121,7 @@
                 <hr class="mt-0 mb-0">
                 <div class="card no-border bg-transparent">
                   <div class="card-title px-0 pb-0 no-border">
-                    <h3 class="heading heading-6 strong-600">Supprimer son compte</h3>
+                    <h3 class="heading heading-6 strong-600 c-orange">Supprimer son compte</h3>
                   </div>
                   <div class="card-body px-0">
                     <p class="mt-1 mb-0">Pour supprimer votre compte, cliquez sur le bouton ci dessous.</p><br>
